Fixed Media Query + Overflow

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
     scroll-behavior: smooth;
 }
 
+html {
+    box-sizing: border-box;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 body{
     max-width: 100vw;
     overflow-x: hidden;
@@ -503,6 +509,10 @@ h2{
 
 .footer__logo--img{
     width: 200px;
+}
+
+.footer__link{
+    margin: 0 8px;
 }
 }
 
